--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "es2017",
       "es2018"
     ],
+    "allowJs": true,
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
