--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "private": true,
-  "displayName": "Plugin Name",
-  "name": "homebridge-plugin-name",
-  "version": "1.0.0",
-  "description": "A short description about what your plugin does.",
+  "private": false,
+  "displayName": "Touchwand Somfy RTS",
+  "name": "homebridge-touchwand-somfy-rts",
+  "version": "0.1.0",
+  "description": "touchwand somfy",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
+    "url": "https://github.com/zeev-mindali/touchwand-somfy-rts.git"
   },
   "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
+    "url": "https://github.com/zeev-mindali/touchwand-somfy-rts/issues"
   },
   "engines": {
     "node": "^18.17.0 || ^20.9.0",
@@ -21,10 +21,19 @@
     "lint": "eslint src/**.ts --max-warnings=0",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
-    "prepublishOnly": "npm run lint && npm run build"
+    "prepublishOnly": "npm run lint && npm run build",
+    "deploy": "standard-version && npm publish && npm run push-with-tags"
+  },
+  "standard-version": {
+    "scripts": {
+      "prerelease": "npm run build && npm test"
+    }
   },
   "keywords": [
-    "homebridge-plugin"
+    "homebridge-plugin",
+    "somfy",
+    "touchwand",
+    "ifeel"
   ],
   "dependencies": {},
   "devDependencies": {
